# test-vscode-extension

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
src/: main.rs  other.rs  test.rs
