[package]
name = "test-vscode-extension"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
proptest = "1.0.0"
kani = { git = "https://github.com/model-checking/kani", features = ["concrete_playback"] }
bolero = "0.9.0"

